--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,3 @@
-name: Deploy to S3
-
 on:
   push:
     branches:
@@ -10,7 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: jakejarvis/s3-sync-action@master
+    - name: HTML Code Check
+      uses: chabad360/htmlproofer@master
+      with:
+          directory: "./"
+          # The directory to scan
+          arguments: --check-favicon --check-img-http --enforce-https 
+          # The arguments to pass to HTMLProofer
+    - name: Deploy to S3
+      uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete --exclude '.git/*' --exclude '.github/*' --exclude './LICENCE' --exclude 'README.md' --exclude '.whitesource'
       env:
