--- a/.github/workflows/pullRequestHTMLCheck.yml
+++ b/.github/workflows/pullRequestHTMLCheck.yml
@@ -11,5 +11,5 @@ jobs:
       with:
           directory: "./"
           # The directory to scan
-          arguments: --check-favicon --check-img-http --enforce-https --disable-external --url-ignore facebook.com
+          arguments: --check-favicon --check-img-http --enforce-https --disable-external --alt-ignore https://www.facebook.com/tr?id=154907775729568&ev=PageView&noscript=1
           # The arguments to pass to HTMLProofer
