--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - name: HTML Code Check
+      uses: chabad360/htmlproofer@master
+      with:
+          directory: "./"
+          # The directory to scan
+          arguments: --check-favicon --check-img-http --enforce-https --disable-external --alt-ignore https://www.facebook.com/tr?id=154907775729568&ev=PageView&noscript=1
+          # The arguments to pass to HTMLProofer
+
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
       with:
