--- a/.github/workflows/pullRequestHTMLCheck.yml
+++ b/.github/workflows/pullRequestHTMLCheck.yml
@@ -2,6 +2,17 @@ on:
   pull_request:
 
 jobs:
+  audit:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Audit Netlify deploy preview
+      uses: jakejarvis/lighthouse-action@master
+      with:
+        netlify_site: 'pedantic-brahmagupta-25f079.netlify.com/'
+    - uses: actions/upload-artifact@master
+      with:
+        name: report
+        path: './report'
   deploy:
     runs-on: ubuntu-latest
     steps:
