--- a/.github/workflows/pullRequestHTMLCheck.yml
+++ b/.github/workflows/pullRequestHTMLCheck.yml
@@ -8,7 +8,7 @@ jobs:
     - name: Audit Netlify deploy preview
       uses: jakejarvis/lighthouse-action@master
       with:
-        netlify_site: 'https://pedantic-brahmagupta-25f079.netlify.app/'
+        netlify_site: 'pedantic-brahmagupta-25f079.netlify.app/'
   deploy:
     runs-on: ubuntu-latest
     steps:
