--- a/.github/workflows/pullRequestHTMLCheck.yml
+++ b/.github/workflows/pullRequestHTMLCheck.yml
@@ -13,3 +13,9 @@ jobs:
           # The directory to scan
           arguments: --check-favicon --check-img-http --enforce-https --disable-external --alt-ignore https://www.facebook.com/tr?id=154907775729568&ev=PageView&noscript=1
           # The arguments to pass to HTMLProofer
+    - name: Run linters
+      uses: wearerequired/lint-action@v1
+      with:
+          github_token: ${{ secrets.github_token }}
+          # Enable your linters here
+          stylelint: true
