--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,13 @@ jobs:
           # The directory to scan
           arguments: --check-favicon --check-img-http --enforce-https --disable-external --alt-ignore https://www.facebook.com/tr?id=154907775729568&ev=PageView&noscript=1
           # The arguments to pass to HTMLProofer
+    
+    - name: Lint CSS files
+      uses: wearerequired/lint-action@v1
+      with:
+          github_token: ${{ secrets.github_token }}
+          # Enable your linters here
+          stylelint: true
             
     - name: Minify CSS & JS
       uses: nizarmah/auto-minify@v1.4
